--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 theme : minima
 title: Kirby Ramores' Professional Portfolio
 author : Kirby Ramores
-description : Welcome to my professional portfolio! I am currently a third year Physics major with a general concentration. With a wide range of research experience from several departments, I would love to pivot to my personal research interests, such as the modelling of complex biomolecular structures through a rigorous physical and computational approach. 
-aboutme : I have gained research experience through student laboratory positions and academic coursework that have built my mathematical discipline, sense of precision, and adherence to scientific principles. I have also gained many technical skills. 
-languages : : Python, Java, Julia, LaTeX, Arduino
-technicalskills: Titration, Spectroscopy, Specimen Analysis, CAD, Project Planning, Science
+description : Welcome to my professional portfolio! I am currently a third year Physics major with a general concentration. With a wide range of research experience from several departments, I would love to pivot to my personal research interests, such as the modelling of complex biomolecular structures through a rigorous physical and computational approach. I have gained research experience through student laboratory positions and academic coursework that have built my mathematical discipline, sense of precision, and adherence to scientific principles. I have also gained many technical skills. My coding experience extends to Python, Java, Julia, LaTeX, Arduino, and I am extremely familiar with the following techniques:  Titration, Spectroscopy, Specimen Analysis, CAD, Project Planning, Science
 Communication/Journalism, Microsoft Suite
+
+
 
 
